# cmake_common

./: CMakeLists.txt  mo2-cmake-config.cmake.in  mo2.cmake  mo2_cpp.cmake  mo2_python.cmake  mo2_targets.cmake  mo2_utils.cmake  mo2_versions.cmake
cmake/: mo2_cpp.cmake  mo2_python.cmake
